src/test/ui/structs/struct-like-enum-nonexhaustive.stderr
error[E0004]: non-exhaustive patterns: `B { x: Some(_) }` not covered
  --> $DIR/struct-like-enum-nonexhaustive.rs:8:11
   |
LL | / enum A {
LL | |     B { x: Option<isize> },
   | |     - not covered
LL | |     C
LL | | }
   | |_- `A` defined here
...
LL |       match x {
   |             ^ pattern `B { x: Some(_) }` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
